packages/isar_community_generator/test/errors/class/private.dart
// must be public

import 'package:isar_community/isar_community.dart';

@collection
// ignore: unused_element - private class used for testing error handling
class _Model {
  Id? id;
}
